[package]
name = "rust_by_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "chapter1_1"
path = "src/chapter1_1.rs"

[[bin]]
name = "chapter1_2"
path = "src/chapter1_2.rs"

[[bin]]
name = "chapter1_2_1a"
path = "src/chapter1_2_1a.rs"

[[bin]]
name = "chapter1_2_1b"
path = "src/chapter1_2_1b.rs"

[[bin]]
name = "chapter1_2_2a"
path = "src/chapter1_2_2a.rs"